--- a/packages/public-client/src/app/components/features/topic-section/topic-section.component.html
+++ b/packages/public-client/src/app/components/features/topic-section/topic-section.component.html
@@ -1,16 +1,18 @@
 <div class="section"
   [ngClass]="{'menu': sectionName === 'MENU', 'booking': sectionName === 'BOOKINGS', 'reverse': orientation == 'right'}">
   <div class="section-text">
-    <div class="section-label">
-      {{ sectionName }}
-    </div>
-    <div class="section-blurb">
-      {{ sectionNote }}
-    </div>
-    <div class="section-button">
-      <button>
-        {{ sectionButton }}
-      </button>
+    <div>
+      <div class="section-label">
+        {{ sectionName }}
+      </div>
+      <div class="section-blurb">
+        {{ sectionNote }}
+      </div>
+      <div class="section-button">
+        <button>
+          {{ sectionButton }}
+        </button>
+      </div>
     </div>
   </div>
   <div class="section-img">
