--- a/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.html
+++ b/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.html
@@ -1,5 +1,3 @@
-<!-- <img [src]="imgSrc" /> -->
-
 <div #MouseFacer
   class="mouse-facer-container"
 >
@@ -7,6 +5,6 @@
     class="mouse-facer-content"
     appMouseTracker
   >
-    <!-- <ng-content></ng-content> -->
   </div>
+  <div class="mouse-facer-shadow"></div>
 </div>
