--- a/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.scss
+++ b/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.scss
@@ -1,3 +1,5 @@
+@use '../../scss/utility';
+
 :host {
   display: block;
 
@@ -5,21 +7,32 @@
     position: relative;
     background: magenta;
     width: 100%;
-    height: 50vw;
+    height: 100%;
     overflow: hidden;
-    perspective: 2000px;
+    perspective: 2000px;    
 
     .mouse-facer-content {
-      position: absolute;
-      background-image: url("/assets/images/home/dive-inn-exterior.jpg");
+      //position: absolute;
       background-size: cover;
       background-position: 0% 40%;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      transform: scale(1.15);
+      // top: 0;
+      // bottom: 0;
+      // left: 0;
+      // right: 0;
+      transform: scale(1.15) translateZ(20px);
       transition: all 0.1s linear;
+
+      // &::after {
+      //   content: '';
+      //   position: absolute;
+      //   top: 0; bottom: 0; left: 0; right: 0;
+      //   box-shadow: 0px 0px 50px #fff inset;
+      // }
+    }
+    .mouse-facer-shadow {
+      position: absolute;
+      top: 0; bottom: 0; left: 0; right: 0;
+      box-shadow: 0px 0px 25px 15px #000 inset;
     }
   }
 }
