--- a/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.scss
+++ b/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.scss
@@ -13,6 +13,7 @@
 
     .mouse-facer-content {
       //position: absolute;
+      height: 100%;
       background-size: cover;
       background-position: 0% 40%;
       // top: 0;
