--- a/packages/public-client/src/app/components/pages/home/home.component.scss
+++ b/packages/public-client/src/app/components/pages/home/home.component.scss
@@ -371,7 +371,10 @@ $verticalGap: 0.75rem;
     .blurb-separator-bottom {      
       svg {
         display: block;
-        width: 40vw;
+        max-width: 80vw;
+        @include utility.media-breakpoint-gte(md) {
+          max-width: 44rem;
+        }
         margin: 0 auto 0vw;
         path, circle, rect, ellipse {
           fill: $lineColor;
@@ -459,7 +462,75 @@ $verticalGap: 0.75rem;
       }      
     }
 
+    .mouse-facer-container {
+      position: relative;
+      text-shadow: 2px 2px 5px #000;
+      .info {
+        position: absolute;
+        top: 0; bottom: 0; left: 0; right: 0;
+        // display: flex;
+        // justify-content: center;
+        // align-items: center;
+        > div {
+          display: inline-block;
+          justify-content: center;
+          align-items: center;
+          background-color: rgba(0,0,0, 0.75);
+          border-radius: 50%;
+          transform: skew(-30deg) rotateZ(-5deg);
+          position: relative;
+          top: 3vw;
+          left: 45vw;
+          padding: 1.5rem 2rem;
+          width: 35vw;
+          > * {
+            display: inline-block;
+            transform: skew(30deg) rotateZ(5deg);
+          }
+        }
+        h2 {                    
+          font-size: 3vw;
+          margin: 0;
+          right: -12vw;
+          position: relative;
+          line-height: 1;
+        }
+        p {
+          font-size: 2vw;
+          margin: 0;
+          padding: 0 2rem 2rem;
+          line-height: 1.25;
+          text-align: center;
+        }
+        &.shop {
+          > div {
+            left: 15vw;
+            transform: skew(30deg) rotateZ(5deg);
+            > * {
+              transform: skew(-30deg) rotateZ(-5deg);
+            }
+          }
+          h2 {
+            @include utility.text-double-outline('Dive Shop');
+            left: 4vw;
+            &::after {
+              -webkit-text-stroke: 16px utility.$dive-white;
+            }
+          }
+        }
+        &.main {
+          h2 {            
+            @include utility.text-double-outline('Charters');
+            &::after {
+              -webkit-text-stroke: 16px utility.$dive-white;
+            }
+          }
+        }
+      } // end info            
+    }
+
     app-mouse-facer.dive-shop, app-mouse-facer.main-room {
+      position: relative;
       height: 40vw;
       overflow: hidden;
       border-top: 1px solid $lineColor;
@@ -500,14 +571,35 @@ $verticalGap: 0.75rem;
     z-index: 1;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem 0;
     background-color: utility.$dive-red;
-    background-image: linear-gradient(0deg, utility.$dive-black 0%, utility.$dive-red 1%, utility.$dive-red 99%, utility.$dive-black 100%);
+    $t1: 50%;
+    background-image: linear-gradient(0deg, utility.$dive-black $t1, utility.$dive-red ($t1 + 1%), utility.$dive-red 99%, utility.$dive-black 100%);
     box-shadow: 0px -2px 4px utility.$dive-black;
     color: utility.$dive-white;
-
-    .navigation {
+    text-shadow: 1px 1px 3px #000;
+    p {
+      padding: 0;
+      margin: 0;
+    }
+    ul.navigation {
       display: flex;
       flex-direction: row;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+    .spacer {
+      padding: 0 0.5rem;
+    }
+
+    .social-icons {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 1rem 0;
     }
   }
 
