--- a/packages/public-client/src/app/components/pages/home/home.component.scss
+++ b/packages/public-client/src/app/components/pages/home/home.component.scss
@@ -143,7 +143,7 @@ $verticalGap: 0.75rem;
             @include utility.media-breakpoint-gte(sm) {
               font-size: 3.5vw;
             }
-            @include utility.text-double-outline('Local Events Live Sports Table Games');
+            @include utility.text-double-outline('Local Events Live Sports & Games');
 
             span {
               //margin: 0 1.25rem;
@@ -477,7 +477,7 @@ $verticalGap: 0.75rem;
           align-items: center;
           background-color: rgba(0,0,0, 0.75);
           border-radius: 50%;
-          transform: skew(-30deg) rotateZ(-5deg);
+          transform: skew(-10deg) rotateZ(-5deg);
           position: relative;
           top: 3vw;
           left: 45vw;
@@ -485,7 +485,7 @@ $verticalGap: 0.75rem;
           width: 35vw;
           > * {
             display: inline-block;
-            transform: skew(30deg) rotateZ(5deg);
+            transform: skew(10deg) rotateZ(5deg);
           }
         }
         h2 {                    
@@ -493,6 +493,7 @@ $verticalGap: 0.75rem;
           margin: 0;
           right: -12vw;
           position: relative;
+          padding-bottom: 0.5rem;
           line-height: 1;
         }
         p {
@@ -502,6 +503,7 @@ $verticalGap: 0.75rem;
           line-height: 1.25;
           text-align: center;
         }
+        $overrideStroke: 14px;
         &.shop {
           > div {
             left: 15vw;
@@ -514,22 +516,49 @@ $verticalGap: 0.75rem;
             @include utility.text-double-outline('Dive Shop');
             left: 4vw;
             &::after {
-              -webkit-text-stroke: 16px utility.$dive-white;
+              -webkit-text-stroke: $overrideStroke utility.$dive-white;
             }
+          }
+          p {
+            position: relative;
+            left: 2vw;
+            top: 0.25vw
           }
         }
         &.main {
           h2 {            
             @include utility.text-double-outline('Charters');
             &::after {
-              -webkit-text-stroke: 16px utility.$dive-white;
+              -webkit-text-stroke: $overrideStroke utility.$dive-white;
             }
           }
         }
+        &.patios {
+          > div {
+            left: 15vw;
+            top: 20vw;
+            transform: skew(30deg) rotateZ(5deg);
+            > * {
+              transform: skew(-30deg) rotateZ(-5deg);
+            }
+          }
+          h2 {
+            left: 4vw;
+            @include utility.text-double-outline('Wide Open');
+            &::after {
+              -webkit-text-stroke: $overrideStroke utility.$dive-white;
+            }
+          }
+          p {
+            position: relative;
+            left: 6vw;
+            top: 0.5vw;
+          }
+        }
       } // end info            
-    }
+    } // end mouse facer container
 
-    app-mouse-facer.dive-shop, app-mouse-facer.main-room {
+    app-mouse-facer {
       position: relative;
       height: 40vw;
       overflow: hidden;
@@ -551,6 +580,27 @@ $verticalGap: 0.75rem;
             background-image: url("/assets/images/inside/Interiors_251.jpg");
             background-position: 0% 50%;
           }
+        }
+      }
+    }
+    app-mouse-facer.patios {
+      ::ng-deep {
+        .mouse-facer-container {
+          .mouse-facer-content {
+            background-image: url("/assets/images/inside/Interiors_163.jpg");
+            background-position: 0% 50%;
+          }
+        }
+      }
+    }
+
+    .sextant-separator {
+      width: 8vw;
+      margin: 4vw auto;      
+      svg {
+        path, circle, rect {
+          stroke: utility.$dive-white;
+          fill: utility.$dive-white;
         }
       }
     }
