--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -84,6 +84,7 @@
         <div></div>
       </div> -->
     </div>
+                      <ng-container *ngTemplateOutlet="FiligreeSeparator"></ng-container>
   </div>
 </div>
 
@@ -127,8 +128,7 @@
 </div>
 
 <div class="anchor-separator-bottom">
-  <img src="assets/images/filigree.svg">
-  <!-- <ng-container *ngTemplateOutlet="FiligreeSeparator"></ng-container> -->
+  <img src="assets/images/filigree.svg">  
 </div>
 
 </main>
