--- a/packages/shared/scss/_colors.scss
+++ b/packages/shared/scss/_colors.scss
@@ -8,3 +8,13 @@ $dive-gray-dk: #544;
 $dive-gray-dk2: #403535;
 $dive-gray-dk3: #262020;
 $dive-yellow: #ca0;
+
+
+$dive-green: transparent;
+
+$dive-orange: #f08010;
+
+///////////////////////
+
+
+$line-colors: $dive-red;
